(fix): video behind crypto tag line won't play on token page (#510)

--- a/app/stylesheets/components/marketing.scss
+++ b/app/stylesheets/components/marketing.scss
@@ -126,7 +126,7 @@
     right: 0;
     bottom: 0;
 
-    > video {
+    > video, img {
       width: 100%;
       height: 100%;
       object-fit: cover;
